--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/styles"> 
+    <!-- <link rel="stylesheet" href="index.css">  //See lines 9 and 10; this is used with that app.use--> 
 </head>
 <body>
     <h1 id="title">Duel Duo</h1>
@@ -49,6 +50,7 @@
     <button id="duel">DUEL!</button>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="index.js"></script>
+    <script src="/js"></script>
+    <!-- <script src="index.js"></script> //See lines 9 and 10; this is used with that app.use-->
 </body>
 </html>
